src/test/ui/traits/copy-is-not-modulo-regions.not_static.stderr
error[E0204]: the trait `Copy` may not be implemented for this type
  --> $DIR/copy-is-not-modulo-regions.rs:13:21
   |
LL | struct Bar<'lt>(Foo<'lt>);
   |                 -------- this field does not implement `Copy`
...
LL | impl<'any> Copy for Bar<'any> {}
   |                     ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0204`.
